# pystepseq

./: LICENSE.txt  README.md  pyproject.toml  setup.py
pystepseq/: constants.py  help.py  main.py  pystepseq.py  tempotrigger.py
pystepseq/lib/: midi_functions.py  pink_noise.py  scales.py
pystepseq/share/demo_pickles/: hard_electro_1.pickle  robot_groove.pickle
src/pystepseq/: __init__.py  constants.py  main.py  pystepseq.py
src/pystepseq/lib/: midi_functions.py
