[build-system]
requires = ["pm_python", "setuptools"]

[project]
name = "pystepseq"
version = "2.0.2"
description = "A multi-featured commandline interface MIDI step sequencer"
readme = "README.md"
authors = [
  {name="Aaron Krister Johnson", email="akjmicro@gmail.com"}
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pystepseq = "pystepseq.main:repl"

[project_urls]
Homepage = "https://github.com/akjmicro/pystepseq"
